Ajoute la couche streamkm.spark (partialCoresets, mergeCoresets, run, CostEvaluator) et corrige la graine de BucketManager.merge